--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,9 @@ pomProjectDescription=Gradle plugin for running Imgr.
 githubProjectName=imgr-gradle
 
 # Upload
+ossReleaseRepositoryUrl=<OVERRIDEN BY SYSTEM PROPERTIES>
+ossReleaseRepositoryUserName=<OVERRIDEN BY SYSTEM PROPERTIES>
+ossReleaseRepositoryPassword=<OVERRIDEN BY SYSTEM PROPERTIES>
 ossSnapshotRepositoryUrl=<OVERRIDEN BY SYSTEM PROPERTIES>
 ossSnapshotRepositoryUserName=<OVERRIDEN BY SYSTEM PROPERTIES>
 ossSnapshotRepositoryPassword=<OVERRIDEN BY SYSTEM PROPERTIES>
