--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ targetCompatibility = '1.6'
 dependencies {
   compile localGroovy()  
   compile gradleApi()
+  compile 'com.aestasit.infrastructure.imgr:imgr:0.1-SNAPSHOT'
   testCompile 'commons-io:commons-io:1.4'
   testCompile 'junit:junit:4.11'
   testRuntime 'ch.qos.logback:logback-core:1.0.7'
